# Photoionization_SAE_PW

./: .gitignore  README.md
old_version_files/Dyson_computation/: computation.cpp  computation.hpp  dyson_computation.hpp  dyson_cube_writer.cpp  dyson_cube_writer.hpp  main.cpp  molpro_out_reader.cpp  molpro_out_reader.hpp
version_1.0/: Computation.cpp  algebra.cpp  compile.sh  compile_cs.sh  continuum.cpp  cros_section_integration.cpp  dyson_cube_writer.cpp  dyson_cube_writer.hpp  files_reader.cpp  files_reader.hpp  global_vars.cpp  global_vars.hpp  global_vars_ref.hpp  photoion_comp.cpp  photoion_comp.hpp  photoion_comp_reference.cpp  photoion_comp_template.cpp  plot_sudden_mfpad.sh
version_1.0/Dyson_computation/: Global_Var.h  main.h
version_1.0/cross_section_FC/: compile_cs.sh  cross_section_FC.cpp
version_1.0/photoelectron_spectra/: compile_cs.sh  photoelectron_spectra.cpp
version_2.0/: Computation.cpp  algebra.cpp  algebra.hpp  compile.sh  compile_cs.sh  continuum.cpp  continuum.hpp  cros_section_integration_cube.cpp  dyson_cube_writer.cpp  files_reader.cpp  files_reader.hpp  global_vars.cpp  objects.hpp  photoion_comp.cpp  photoion_comp.hpp  photoion_comp_template.cpp
version_3.0/: Computation.cpp  Computation.hpp  Legendre_functions.cpp  algebra.cpp  algebra.hpp  angular_int_aux.cpp  compile.sh  dyson_cube_writer.cpp  files_reader.cpp  files_reader.hpp  global_vars.hpp  global_vars_ref.hpp  hf5_photoion.cpp  hf5_photoion.hpp  objects.cpp  photoion_comp.cpp  photoion_comp.hpp  photoion_comp_template.cpp
version_3.0/photoionization_module_1.0/: Computation.cpp  Computation.hpp  Legendre_functions.cpp  hf5_photoion.hpp  pice_module.cpp  pice_module.hpp  pice_module_comp.cpp
version_4.0/: Computation.cpp  Computation.hpp  Computation_old.cpp  Legendre_functions.cpp  algebra.cpp  algebra.hpp  angular_int_aux.cpp  compile.sh  compile_cs.sh  coulomb_mo.cpp  coulomb_mo.hpp  cros_section_integration.cpp  cros_section_integration_cube.cpp  dyson_cube_writer.cpp  dyson_cube_writer.hpp  files_reader.cpp  files_reader.hpp  global_vars_temp.hpp  photoion_comp.cpp  photoion_comp.hpp  photoion_comp_old.cpp  temp_main.cpp  test_file.cpp  test_file.hpp
version_4.0/photoionization_module_1.0/: Computation.cpp  Legendre_functions.cpp  hf5_photoion.cpp  pice_module.cpp  pice_module.hpp
version_4.0/tests/: Legendre_functions_test.cpp  algebra_test.cpp  angular_int_aux_test.cpp  main_test.cpp  old_tests.cpp  test_headers.hpp  test_utility.cpp
version_4.1/: CMakeLists.txt  TODO.txt  compile.sh  photoion_comp.cpp  photoion_header.h.in
version_4.1/FilesUtils/: CMakeLists.txt  filesutils.h  molpro_parser.cpp
version_4.1/MathFunctions/: CMakeLists.txt  Density_utils.cpp  Molec_integrals.cpp  angular_int_aux.cpp  mathfunctions.h  mo_bessel_integrals.cpp  poly_ovlp_one_elec_ope.cpp  spherical_harmonics.cpp
version_4.1/Tests/: CMakeLists.txt  photoion_tests.cpp  photoion_tests.h  test_angular_int_aux.cpp  test_files_utils.cpp  test_molec_integ.cpp  test_poly_ovlp_one_elec_ope.cpp  test_utils.cpp
version_4.1/Utilities/: CMakeLists.txt  array_utils.cpp  err_handler.cpp  str_utils.cpp  utilities.h
